<resources>

    <string name="app_name">Angry Pig</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_airplane_game">Angry Pig</string>
    <string name="menuPlayButtonDescription">Uçak Oyununu Başlat</string>
    <string name="menuOptionsButtonDescription">Seçenekler</string>
    <string name="menuInstructionsButtonDescription">Talimatlar</string>
    <string name="optionMuteDescription">Sesi Kapat</string>
    <string name="optionUnMuteDescription">Sesi Aç</string>
    <string name="optionAnimationCloseDescription">Animasyon Kapat</string>
    <string name="optionAnimationOpenDescription">Animasyon Aç</string>
    <string name="optionVibrationCloseDescription">Titreşim Kapat</string>
    <string name="optionVibrationOpenDescription">Titreşim Aç</string>
    <string name="optionsTitleDescription">Ayarlar Başlığı</string>
    <string name="optionsSoundDescription">Ses Ayarı</string>
    <string name="optionsAnimationDescription">Animasyon Ayarı</string>
    <string name="optionsVibrationDescription">Titreşim Ayarı</string>
    <string name="optionsMenuBackButtonDescription">Ayarlar Menüsü Geri Tuşu</string>
    <string name="instructionsTextDescription">Talimatlar Yazısı</string>
    <string name="highScoresTextDescription">Skor Yazısı</string>
    <string name="instructionsMenuBackButtonDescription">Talimatlar Menüsü Geri Tuşu</string>
    <string name="instructionsText">Oyun ekranda beliren balonların taşıdıkları sayılara bakarak ardışık olarak toplanması esasına dayanır.\nOyuncu telefonunu istediği yöne doğru eğerek veya ekranda yer alan yön tuşlarını kullanarak uçağı yönlendirir.\nUçağın yakıtı süreyle orantılı azalır.\nOyun ekranında beliren yakıt paletlerinin toplanmasıyla yenilenir.\nTüm sayılar toplanınca oyun biter.\n</string>
    <string name="homeButtonDescription">Menü Çıkış</string>

</resources>